k8s/service-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: jsserver
  labels:
    app: jsserver
    tier: backend
spec:
  selector:
    app: jsserver
    tier: backend
  type: LoadBalancer
  ports:
  - name: jsserver-service
    port: 80
    targetPort: 3000
    protocol: TCP
