k8s/service-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: jsserver
  labels:
    app: jsserver
    tier: backend
spec:
  selector:
    app: jsserver
    tier: backend
  type: NodePort
  ports:
  - name: jsserver-service
    port: 80
    nodePort: 30001
    targetPort: 3000
    protocol: TCP
