k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "ingress.fullcycle.com.br"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: jsserver-service
          servicePort: 3000
